# pdf-parser

./: .dockerignore  .gitignore  DOCS.md  Dockerfile  LICENSE  README.md  coordinates.py  draw_pdf.py  extractor_script.py  generate-types.ts  improvements.md  notebook.ipynb  notebook_jake.ipynb  notebook_parser.ipynb  notebook_table_parser.ipynb  output_builder_script.py  output_generated.json  package-lock.json  package.json  parser_script.py  pdf_data.json  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_package.txt  setup.py  table_checker_script.py  table_parser.py  template_json_schema.json  test_halifax_template.py
api/: Dockerfile  cleaner.ipynb  cleaner.py  main.py  requirements.txt  sort_code_template.json  sort_code_template_extraction.json  sort_code_template_ocr.json  utils.py
database/: test_assessments.py
docs/: DOCS.md
json_schemas/: assessment_schema.json  client_schema.json  document_schema.json  documentmetadata_schema.json  example_model_schema.json  financialanalysis_schema.json  subscription_schema.json  user_schema.json
jsons/: analysis_results.json  assessment_valid.json  assessments_valid.json  client_international.json  client_self_employed.json  client_valid.json  clients_international.json  clients_self_employed.json  clients_valid.json  document_metadata.json  document_metadata_bank_statement.json  document_metadata_payslip.json  document_processed.json  document_valid_pdf.json  document_with_errors.json  documentmetadata_bank_statement.json  documentmetadata_payslip.json  documents_processed.json  payslip_data.json  (+14 more)
(+198 files in other folders)
